--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,12 +12,13 @@ html(lang="en")
         main 
             div#welcome
                 form
-                    input(placeholder="room name", required, type="text")
+                    input#name(placeholder="Nickname", required, type="text")
+                    input#roomname(placeholder="RoomName", required, type="text")
                     button Enter Room
             div#room
-                h3
+                h3 
                 ul 
-                form
+                form#msg
                     input(placeholder="message", required, type="text")
                     button Send
         script(src="/socket.io/socket.io.js") 
