--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -15,6 +15,8 @@ html(lang="en")
                     input#name(placeholder="Nickname", required, type="text")
                     input#roomname(placeholder="RoomName", required, type="text")
                     button Enter Room
+                h4 Room List: 
+                ul 
             div#room
                 h3 
                 ul 
