--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -19,9 +19,14 @@ html(lang="en")
                 ul 
             div#room
                 h3 
+                div#myStream
+                    video#myFace(autoplay, playsinline, width="400", height="400")
+                    button#mute Mute
+                    button#camera Camera Off
                 ul 
                 form#msg
                     input(placeholder="message", required, type="text")
                     button Send
+                button#exit Exit
         script(src="/socket.io/socket.io.js") 
         script(src="/public/js/app.js") 
