--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -23,6 +23,7 @@ html(lang="en")
                     video#myFace(autoplay, playsinline, width="400", height="400")
                     button#mute Mute
                     button#camera Camera Off
+                    select#cameras
                 ul 
                 form#msg
                     input(placeholder="message", required, type="text")
