--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,26 +4,33 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Zoom
+        title MRS
         link(rel="stylesheet", href="https://unpkg.com/mvp.css@1.12/mvp.css")
+        link(rel="stylesheet", href="public/css/style.css")
     body 
-        header 
-            h1 Zoom
         main 
             div#welcome
+                h1 1:1 Meeting Room Service
+                h3 Enter nickname and room name to start
                 form
-                    input#name(placeholder="Nickname", required, type="text")
-                    input#roomname(placeholder="RoomName", required, type="text")
-                    button Enter Room
-                h4 Room List: 
-                ul 
+                    div
+                        span Nickname:
+                        input#nickname(placeholder="Nickname", required, type="text", maxlength='15')
+                    div
+                        span Room:
+                        input#roomname(placeholder="RoomName", required, type="text")
+                    button Join
             div#room
                 h3 
                 div#myStream
-                    video#myFace(autoplay, playsinline, width="400", height="400")
+                    video#myFace(autoplay, playsinline)
+                    span#myNickname
                     button#mute Mute
                     button#camera Camera Off
                     select#cameras
+                div#peerStream
+                    video#peerFace(autoplay, playsinline)
+                    span#peerNickname
                 ul 
                 form#msg
                     input(placeholder="message", required, type="text")
