--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -3,7 +3,6 @@ body {
   margin: 0;
   height: 100%;
   width: 100%;
-  overflow: hidden;
 }
 
 #welcome{
@@ -107,4 +106,8 @@ body {
   font-size: 0.85rem;
   color: white;
   height: 1.5rem;
+}
+
+.modal{
+  display: none;
 }
