--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,40 +1,57 @@
-doctype html
+doctype html 
 html(lang="en")
     head
         meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title MRS
-        link(rel="stylesheet", href="https://unpkg.com/mvp.css@1.12/mvp.css")
         link(rel="stylesheet", href="public/css/style.css")
+        script(src="socket.io/socket.io.js")
+        title Room
     body 
-        main 
-            div#welcome
-                h1 1:1 Meeting Room Service
-                h3 Enter nickname and room name to start
-                form
-                    div
-                        span Nickname:
-                        input#nickname(placeholder="Nickname", required, type="text", maxlength='15')
-                    div
-                        span Room:
-                        input#roomname(placeholder="RoomName", required, type="text")
-                    button Join
-            div#room
-                h3 
-                div#myStream
-                    video#myFace(autoplay, playsinline)
-                    span#myNickname
+        main
+        div#welcome
+            h1 1:1 Private Room
+            h3 Enter nickname and room name to start 
+            form
+                div 
+                    span Nickname: 
+                    input#nickname(placeholder="nickname", required, type="text", maxlength='15')
+                div
+                    span Room:
+                    input#roomname(placeholder="room", required, type="text")
+                button Join
+            div#alert
+                span#message
+        div#room
+            div#room-content
+                div#stream-wrapper
+                    div#myStream.stream
+                        video#myVideo(autoPlay, playsinline)
+                        span#myNickname
+                        select#camera-selection
+                    div#peerStream.stream
+                        video#peerVideo(autoPlay, playsinline)
+                        span#peerNickname
+                div#chat-wrapper(style={display: 'none'}) 
+                    div#chat-content-wrapper
+                        ul
+                    form#chat-input
+                        textarea(placeholder="Press Enter To Send Message", required)
+                div#control
                     button#mute Mute
                     button#camera Camera Off
-                    select#cameras
-                div#peerStream
-                    video#peerFace(autoplay, playsinline)
-                    span#peerNickname
-                ul 
-                form#msg
-                    input(placeholder="message", required, type="text")
-                    button Send
-                button#exit Exit
-        script(src="/socket.io/socket.io.js") 
-        script(src="/public/js/app.js") 
+                    button#hang-up Hang Up
+                    button#chat-button Chat
+            div#confirm-join-overlay.modal-overlay
+                div#confirm-join.modal
+                    span#request-nickname
+                    span#confirm-message
+                    button#approve Approve
+                    button#decline Decline
+            div#disconnected-peer-overlay.modal-overlay
+                div#disconnected-peer.modal
+                    span
+                        strong Remote peer disconnected.
+                    span Do you want to leave the room or wait for the other peer to join?
+                    button#leave-room Leave
+                    button#stay-room Stay
+        script(async src="public/js/app.js")
