--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -23,6 +23,7 @@ html(lang="en")
                 span#message
         div#room
             div#room-content
+                div#roomName
                 div#stream-wrapper
                     div#myStream.stream
                         video#myVideo(autoPlay, playsinline)
